--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/chitchat?useSSL=false
+spring.datasource.username = root
+spring.datasource.password = mysql
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.show-sql = true
